TEST_PROGRAMS/typing_benchmarks/invalid/type_as_value1.go
package main

type t int

func foo() {
	// Cannot use TyId as ExprId
	println(t)
}
